[gtk4] fix gdk_x11_surface_get_frame_extents with window borders.

As per [1], width and height are inner sizes:

   Return the drawable's dimensions (width and height). For a window,
   these dimensions specify the inside size, not including the border.

The frame extents are supposed to include the border, so account for
that. The top left coordinate is already correct.

This fixes https://bugzilla.mozilla.org/show_bug.cgi?id=1958174

[1]: https://tronche.com/gui/x/xlib/window-information/XGetGeometry.html