gdk/x11/gdksurface-x11.c
@@ -2814,8 +2814,8 @@ gdk_x11_surface_get_frame_extents (GdkSurface    *surface,
             {
 	      rect->x = wx;
 	      rect->y = wy;
-	      rect->width = ww;
-	      rect->height = wh;
+	      rect->width = ww + wb * 2;
+	      rect->height = wh + wb * 2;
 	    }
 
 	  /* _NET_FRAME_EXTENTS format is left, right, top, bottom */
@@ -2887,8 +2887,8 @@ gdk_x11_surface_get_frame_extents (GdkSurface    *surface,
     {
       rect->x = wx;
       rect->y = wy;
-      rect->width = ww;
-      rect->height = wh;
+      rect->width = ww + wb * 2;
+      rect->height = wh + wb * 2;
     }
 
  out:
